Fix: fixed hamburger toggler, alignment of navlinks, change home page img and minor css fixes

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,19 @@ a {
     color: white !important;
 }
 
+.navbar-nav {
+    text-align: right;
+}
+
+.custom-toggler.navbar-toggler{
+    border-color: white !important;;
+}
+
+.custom-toggler .navbar-toggler-icon {
+    background-image: url(
+"data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
 .dropdown-item {
     color: black !important;
 }
@@ -487,6 +500,7 @@ form>.mb-3>label {
 
     .typewrite {
         color: white;
+        font-weight: lighter;
     }
 
     #home-section>.container>img {
@@ -682,6 +696,55 @@ form>.mb-3>label {
         margin-top: 5px;
         padding-top: 10px;
         margin-bottom: 50px;
+    }
+
+    #section10 {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        margin-top: 300px;
+    }
+
+    #section10::after {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        content: '';
+        width: 100%;
+        height: 80%;
+        background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, .8) 80%, rgba(0, 0, 0, .8) 100%);
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, .8) 80%, rgba(0, 0, 0, .8) 100%);
+    }
+
+    #section10 a {
+        padding-top: 60px;
+    }
+
+    #section10 a span {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 30px;
+        height: 50px;
+        margin-left: -15px;
+        border: 2px solid #fff;
+        border-radius: 50px;
+        box-sizing: border-box;
+    }
+
+    #section10 a span::before {
+        position: absolute;
+        top: 10px;
+        left: 50%;
+        content: '';
+        width: 6px;
+        height: 6px;
+        margin-left: -3px;
+        background-color: #fff;
+        border-radius: 100%;
+        -webkit-animation: sdb10 2s infinite;
+        animation: sdb10 2s infinite;
+        box-sizing: border-box;
     }
 
     main>div>#home-section>div {
